OPENJPA-1700 FindBugs - Method invokes inefficient Number constructor; use static valueOf instead
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@955046 13f79535-47bb-0310-9956-ffa450edef68