@@ -89,7 +89,7 @@ public abstract class AbstractQueryCache
             // Pre-load all the entity types into the HashMap to handle 
             // synchronization on the map efficiently
             for (Object o : perTypes)
-                entityTimestampMap.put((String)o, new Long(0));
+                entityTimestampMap.put((String)o, Long.valueOf(0));
         }
     }
 
@@ -121,7 +121,7 @@ public abstract class AbstractQueryCache
             Collection changedTypes = ev.getTypes();
             HashMap<String,Long> changedClasses = 
                 new HashMap<String,Long>();
-            Long tstamp = new Long(System.currentTimeMillis());
+            Long tstamp = Long.valueOf(System.currentTimeMillis());
             for (Object o: changedTypes) {
                 String name = ((Class) o).getName();
                 if(!changedClasses.containsKey(name)) {
